--- a/app/src/main/res/layout/activity_month_percentage.xml
+++ b/app/src/main/res/layout/activity_month_percentage.xml
@@ -6,4 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".MonthPercentage">
 
+    <TextView
+        android:id="@+id/textViewForMonth"
+        android:layout_width="362dp"
+        android:layout_height="71dp"
+        android:gravity="center"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
