--- a/app/src/main/res/layout/activity_week_percentage.xml
+++ b/app/src/main/res/layout/activity_week_percentage.xml
@@ -13,6 +13,8 @@
         android:layout_marginTop="40dp"
         android:layout_marginBottom="170dp"
         android:text="TextView"
+        android:gravity="center"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,6 +26,8 @@
         android:layout_height="70dp"
         android:layout_marginTop="40dp"
         android:text="TextView"
+        android:gravity="center"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/week3" />
@@ -34,6 +38,8 @@
         android:layout_height="70dp"
         android:layout_marginTop="40dp"
         android:text="TextView"
+        android:gravity="center"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/week2" />
@@ -46,6 +52,8 @@
         android:layout_height="70dp"
         android:layout_marginTop="30dp"
         android:text="TextView"
+        android:gravity="center"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/week1" />
@@ -56,6 +64,8 @@
         android:layout_height="70dp"
         android:layout_marginTop="60dp"
         android:text="TextView"
+        android:gravity="center"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
