--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,12 @@
     <color name="allow_button">#006400</color>
     <color name="ban_button">#8B0000</color>
     <color name="grey">#808080</color>
+
+    <color name="green">#00FF00</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="orange">#FFA500</color>
+    <color name="red">#FF0000</color>
+    <color name="brick_red">#8B0000</color>
+
+
 </resources>
