Змінено: невеликі правки

--- a/app/src/main/res/layout/activity_budget.xml
+++ b/app/src/main/res/layout/activity_budget.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
-        android:text="Тут буде показано ваш бюджет "
+        android:text="@string/ShowBudget"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,7 @@
         android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="numberDecimal"
-        android:hint="Введіть ваш бюджет"
+        android:hint="@string/AddYourBudget"
         app:layout_constraintEnd_toEndOf="@+id/showBudget"
         app:layout_constraintStart_toStartOf="@+id/showBudget"
         app:layout_constraintTop_toBottomOf="@+id/showBudget" />
@@ -39,7 +39,7 @@
         android:layout_marginBottom="450dp"
         android:backgroundTint="@color/allow_button"
         android:onClick="addBudgetClick"
-        android:text="Згода"
+        android:text="@string/BudgetSubmit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonChangeBudget"
         app:layout_constraintStart_toStartOf="@+id/addBudget"
@@ -53,7 +53,7 @@
         android:layout_marginBottom="450dp"
         android:backgroundTint="@color/ban_button"
         android:onClick="changeBudgetClick"
-        android:text="Міняю"
+        android:text="@string/ExchengeButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/addBudget"
         app:layout_constraintStart_toEndOf="@+id/buttonAddBudget"
