--- a/app/src/main/res/layout/activity_week_percentage.xml
+++ b/app/src/main/res/layout/activity_week_percentage.xml
@@ -12,7 +12,7 @@
         android:layout_height="70dp"
         android:layout_marginTop="40dp"
         android:layout_marginBottom="170dp"
-        android:text="TextView"
+        android:text="@string/textview1"
         android:gravity="center"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,7 +25,7 @@
         android:layout_width="330dp"
         android:layout_height="70dp"
         android:layout_marginTop="40dp"
-        android:text="TextView"
+        android:text="@string/textview2"
         android:gravity="center"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
         android:layout_width="330dp"
         android:layout_height="70dp"
         android:layout_marginTop="40dp"
-        android:text="TextView"
+        android:text="@string/textview3"
         android:gravity="center"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +51,7 @@
         android:layout_width="330dp"
         android:layout_height="70dp"
         android:layout_marginTop="30dp"
-        android:text="TextView"
+        android:text="@string/textview4"
         android:gravity="center"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +63,7 @@
         android:layout_width="330dp"
         android:layout_height="70dp"
         android:layout_marginTop="60dp"
-        android:text="TextView"
+        android:text="@string/textview5"
         android:gravity="center"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
