--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="402dp"
         android:layout_height="73dp"
         android:lineSpacingExtra="14sp"
-        android:text="Тут буде ваш бюджет, гарного дня!"
+        android:text="@string/HelloWords"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -28,7 +28,7 @@
         android:layout_marginStart="34dp"
         android:layout_marginEnd="34dp"
         android:onClick="startBudgetActivity"
-        android:text="Додати бюджет"
+        android:text="@string/AddBudget"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.6"
@@ -44,7 +44,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="34dp"
         android:onClick="startExpenseActivity"
-        android:text="Додати витрати"
+        android:text="@string/AddCosts"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonAddBudget" />
@@ -57,7 +57,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="34dp"
         android:onClick="startWeekPercentage"
-        android:text="Витрати за тиждень "
+        android:text="@string/CostsWeek"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonCosts" />
@@ -70,7 +70,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="34dp"
         android:onClick="startMonthPercentage"
-        android:text="Витрати за місяць"
+        android:text="@string/CostsMonth"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonCostsWeek" />
