--- a/app/src/main/res/layout/activity_month_percentage.xml
+++ b/app/src/main/res/layout/activity_month_percentage.xml
@@ -11,7 +11,7 @@
         android:layout_width="362dp"
         android:layout_height="71dp"
         android:gravity="center"
-        android:text="TextView"
+        android:text="@string/textview"
         android:textAlignment="center"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
